added guest registration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-django
-djangorestframework
-django-filter
-markdown
-qrcode
+django==4.2.7
+djangorestframework==3.14.0
+django-filter==23.4
+markdown==3.5.1
+qrcode[pil]==7.4.2
+pillow==10.1.0
+django-cors-headers==4.3.1
+celery==5.3.4
+django-celery-results==2.5.1
+redis==5.0.1
+requests==2.31.0
+python-decouple==3.8
+psycopg2-binary==2.9.9
+django-extensions==3.2.3
+django-rest-framework-simplejwt==5.3.0
