--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,8 @@ requests==2.31.0
 python-decouple==3.8
 psycopg2-binary==2.9.9
 django-extensions==3.2.3
-django-rest-framework-simplejwt==5.3.0
+djangorestframework-simplejwt==5.3.0
+mysqlclient==2.2.0
+whitenoise==6.6.0
+gunicorn==21.2.0
+django-environ==0.11.2
