--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
 django==4.2.7
 djangorestframework==3.14.0
 django-filter==23.4
-markdown==3.5.1
 qrcode[pil]==7.4.2
 pillow==10.1.0
-django-cors-headers==4.3.1
 celery==5.3.4
 django-celery-results==2.5.1
 redis==5.0.1
 requests==2.31.0
-python-decouple==3.8
-psycopg2-binary==2.9.9
-django-extensions==3.2.3
-djangorestframework-simplejwt==5.3.0
+django-currentuser==0.5.3
 mysqlclient==2.2.0
 whitenoise==6.6.0
 gunicorn==21.2.0
-django-environ==0.11.2
