--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 django==4.2.7
 djangorestframework==3.14.0
 django-filter==23.4
-qrcode[pil]==7.4.2
-pillow==10.1.0
+qrcode==7.4.2
+Pillow==10.1.0
 requests==2.31.0
 django-currentuser==0.5.3
 mysqlclient==2.2.0
