added docker  files

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,9 +2,16 @@
 .gitignore
 README.md
 .env
+.env.production
 .DS_Store
 *.pyc
 __pycache__
 db.sqlite3
-media/
-static/
+*.log
+local_settings.py
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
