--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: mysql:8.0
-    container_name: hotel_db
+    container_name: hotel_db_dev
     restart: always
     environment:
       MYSQL_DATABASE: ${DB_NAME:-temp}
@@ -11,7 +11,7 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD:-hotel_password}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data_dev:/var/lib/mysql
     ports:
       - "3306:3306"
     healthcheck:
@@ -21,7 +21,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: hotel_redis
+    container_name: hotel_redis_dev
     restart: always
     ports:
       - "6379:6379"
@@ -33,7 +33,7 @@ services:
 
   web:
     build: .
-    container_name: hotel_web
+    container_name: hotel_web_dev
     restart: always
     depends_on:
       db:
@@ -53,18 +53,19 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - TIME_ZONE=${TIME_ZONE:-Asia/Kolkata}
     volumes:
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - .:/app
+      - static_volume_dev:/app/staticfiles
+      - media_volume_dev:/app/media
     ports:
       - "8000:8000"
     command: >
       sh -c "python manage.py migrate --noinput &&
              python manage.py collectstatic --noinput --verbosity=0 &&
-             gunicorn --bind 0.0.0.0:8000 --workers 3 --timeout 120 config.wsgi:application"
+             python manage.py runserver 0.0.0.0:8000"
 
   celery:
     build: .
-    container_name: hotel_celery
+    container_name: hotel_celery_dev
     restart: always
     depends_on:
       db:
@@ -78,11 +79,13 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-hotel_password}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    volumes:
+      - .:/app
     command: celery -A config worker -l info
 
   celery-beat:
     build: .
-    container_name: hotel_celery_beat
+    container_name: hotel_celery_beat_dev
     restart: always
     depends_on:
       db:
@@ -96,9 +99,11 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-hotel_password}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    volumes:
+      - .:/app
     command: celery -A config beat -l info
 
 volumes:
-  db_data:
-  static_volume:
-  media_volume:
+  db_data_dev:
+  static_volume_dev:
+  media_volume_dev:
