--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Django Settings
-DJANGO_SECRET_KEY=your-very-long-secret-key-here
+DJANGO_SECRET_KEY=django-insecure-hx$$rau=sf86q@*-bu01+yzla%!b_*8g*pfddb3_mezm_h5ff(u
 DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
 
