--- a/docker-compose.simple.yml
+++ b/docker-compose.simple.yml
@@ -6,33 +6,43 @@ services:
     container_name: hotel_db
     restart: always
     environment:
-      MYSQL_DATABASE: temp
-      MYSQL_USER: hotel_user
-      MYSQL_PASSWORD: hotel_password
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: ${DB_NAME:-temp}
+      MYSQL_USER: ${DB_USER:-hotel_user}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-hotel_password}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   web:
     build: .
     container_name: hotel_web
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      - DJANGO_SECRET_KEY=django-insecure-hx$$rau=sf86q@*-bu01+yzla%!b_*8g*pfddb3_mezm_h5ff(u
-      - DJANGO_DEBUG=False
-      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
-      - DB_NAME=temp
-      - DB_USER=hotel_user
-      - DB_PASSWORD=hotel_password
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-django-insecure-hx$$rau=sf86q@*-bu01+yzla%!b_*8g*pfddb3_mezm_h5ff(u}
+      - DJANGO_DEBUG=${DJANGO_DEBUG:-False}
+      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1,0.0.0.0}
+      - DB_NAME=${DB_NAME:-temp}
+      - DB_USER=${DB_USER:-hotel_user}
+      - DB_PASSWORD=${DB_PASSWORD:-hotel_password}
       - DB_HOST=db
       - DB_PORT=3306
+      - TIME_ZONE=${TIME_ZONE:-Asia/Kolkata}
     volumes:
-      - static_volume:/app/static
+      - static_volume:/app/staticfiles
       - media_volume:/app/media
     ports:
       - "8000:8000"
+    command: >
+      sh -c "python manage.py migrate --noinput &&
+             python manage.py collectstatic --noinput --verbosity=0 &&
+             gunicorn --bind 0.0.0.0:8000 --workers 3 --timeout 120 config.wsgi:application"
 
 volumes:
   db_data:
