--- a/nginx.conf
+++ b/nginx.conf
@@ -6,18 +6,32 @@ server {
     listen 80;
     server_name localhost;
 
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    
+    # Static files
     location /static/ {
         alias /app/staticfiles/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     location /media/ {
         alias /app/media/;
+        expires 1y;
+        add_header Cache-Control "public";
     }
 
     location / {
         proxy_pass http://hotel_app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect off;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
     }
 }
