--- a/.env.production
+++ b/.env.production
@@ -15,3 +15,6 @@ JWT_REFRESH_TOKEN_LIFETIME=1
 
 # Timezone
 TIME_ZONE=Asia/Kolkata
+
+# Note: When using docker-compose.local-db.yml, set DB_HOST=host.docker.internal
+# to connect to a database running on your local machine instead of in a container
