--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,12 @@
 # Django Settings for Local Database Connection
+# Update these with your actual local database details
+
+# Django Settings
 DJANGO_SECRET_KEY=django-insecure-hx$$rau=sf86q@*-bu01+yzla%!b_*8g*pfddb3_mezm_h5ff(u
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
-# Database Configuration - Update these with your local database details
+# Database Configuration - UPDATE THESE VALUES WITH YOUR LOCAL DATABASE DETAILS
 DB_NAME=your_local_database_name
 DB_USER=your_local_db_user
 DB_PASSWORD=your_local_db_password
