--- a/docker-compose.local-db.yml
+++ b/docker-compose.local-db.yml
@@ -8,16 +8,15 @@ services:
     env_file:
       - .env.local
     environment:
-      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-django-insecure-hx$$rau=sf86q@*-bu01+yzla%!b_*8g*pfddb3_mezm_h5ff(u}
-      - DJANGO_DEBUG=${DJANGO_DEBUG:-True}
-      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS:-localhost,127.0.0.1,0.0.0.0}
-      - DB_NAME=${DB_NAME:-hotel_db}
-      - DB_USER=${DB_USER:-hotel_user}
-      - DB_PASSWORD=${DB_PASSWORD:-hotel_password}
-      # Connect to host machine database
-      - DB_HOST=${DB_HOST:-host.docker.internal}
-      - DB_PORT=${DB_PORT:-3306}
-      - TIME_ZONE=${TIME_ZONE:-Asia/Kolkata}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - TIME_ZONE=${TIME_ZONE}
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
