Remove sensitive information from environment files and add proper documentation

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,10 @@ celerybeat.pid
 
 # Environment variables
 .env
-*.env
+.env.local
+.env.production
+.env.example
+.env.development
 
 # Coverage / Testing
 .coverage
